add debug file for sfs and sepicp to drafts

--- a/src/drafs/debug_seqicp.ipynb
+++ b/src/drafs/debug_seqicp.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "causalnex package not installed. You wont be able to run dynotears model.\n",
+      "tigramite package not installed. You wont be able to run pcmci model.\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import pandas as pd\n",
@@ -16,11 +25,10 @@
     "from utils.parsers import str_2_bool\n",
     "\n",
     "from statsmodels.tsa.api import VAR\n",
-    "from models.ModelClasses import LassoWrapper, LinearRegressionWrapper, RandomForestWrapper, SVMWrapper\n",
-    "from utils.parsers import add_and_keep_lags_only\n",
-    "from sklearn.feature_selection import SequentialFeatureSelector, RFECV\n",
-    "\n",
-    "from copy import copy\n",
+    "import rpy2.robjects as robjects\n",
+    "from rpy2.robjects import pandas2ri\n",
+    "from rpy2.robjects import numpy2ri\n",
+    "pandas2ri.activate()\n",
     "\n",
     "parser = argparse.ArgumentParser(description=\"Run forecast.\")\n",
     "\n",
@@ -31,7 +39,7 @@
     "pval_threshold=0.05\n",
     "fix_start=True\n",
     "incercept=True\n",
-    "fs_method=\"sfscv-forward-rf\"\n",
+    "fs_method=\"seqICP\"\n",
     "opt_k_method=\"no\"\n",
     "clustering_method=\"no\"\n",
     "n_clusters=0\n",
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,20 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/danielco/miniconda3/envs/cml-fin/lib/python3.8/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
+      "/home/danielco/miniconda3/envs/cml-fin-r/lib/python3.11/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     }
    ],
    "source": [
-    "step = 90\n",
+    "step = 94\n",
     "\n",
     "if fix_start or (step == 0):\n",
     "    start = 0\n",
@@ -196,84 +204,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 'forward' in fs_method:\n",
-    "    direction = 'forward'\n",
-    "elif 'backward' in fs_method:\n",
-    "    direction = 'backward'\n",
+    "data_train = pd.concat([yt_train, Xt_train], axis=1)\n",
+    "data_test = pd.concat([yt_test, Xt_test], axis=1)\n",
+    "\n",
+    "# convert dataframe to R objects\n",
+    "X_train = data_train.drop(target, axis=1).values\n",
+    "y_train = data_train[target]\n",
+    "\n",
+    "X_train_r = numpy2ri.numpy2rpy(X_train)\n",
+    "y_train_r = numpy2ri.numpy2rpy(y_train)\n",
+    "selected_p_r =  robjects.vectors.IntVector([selected_p])\n",
+    "pval_threshold_r = robjects.vectors.IntVector([pval_threshold])\n",
+    "\n",
+    "# pass inputs to global variables\n",
+    "robjects.globalenv['Xmatrix'] = X_train_r\n",
+    "robjects.globalenv['Y'] = y_train_r\n",
+    "robjects.globalenv[\"selected_p\"] = selected_p_r\n",
+    "robjects.globalenv[\"pval_threshold\"] = pval_threshold_r\n",
+    "\n",
+    "# robjects.r(f'''\n",
+    "#     library(seqICP)\n",
+    "\n",
+    "#     seqICP_result <- seqICP(Xmatrix,\n",
+    "#                             Y,\n",
+    "#                             test=\"smooth.variance\",\n",
+    "#                             par.test=list(alpha=pval_threshold,B=1000),\n",
+    "#                             model=\"ar\",\n",
+    "#                             par.model=list(pknown=TRUE,p=selected_p),\n",
+    "#                             stopIfEmpty=FALSE,\n",
+    "#                             silent=TRUE)\n",
+    "#     seqICP_summary <- summary(seqICP_result)\n",
+    "#     parent_set <- seqICP_result$parent.set\n",
+    "#     p_values <- seqICP_result$p.values\n",
+    "\n",
+    "# ''')\n",
+    "\n",
+    "# # retrieve results from seqICP\n",
+    "# p_values = robjects.r['p_values']\n",
+    "\n",
+    "# selected_variables_df = pd.DataFrame({\n",
+    "#     \"variables\": data_train.drop(target, axis=1).columns,\n",
+    "#     \"pval\": p_values\n",
+    "# })\n",
+    "\n",
+    "selected_variables_df = pd.read_csv(f'pvalues_step={step}.csv')\n",
+    "\n",
+    "selected_variables_df = selected_variables_df.loc[selected_variables_df[\"pval\"] <= pval_threshold]\n",
+    "\n",
+    "if selected_variables_df.shape[0] > 0:\n",
+    "    selected_variables = []\n",
+    "    for feature in selected_variables_df[\"variables\"]:\n",
+    "        for i in range(1, selected_p+1):\n",
+    "            selected_variables.append(f\"{feature}(t-{i})\")\n",
     "else:\n",
-    "    raise Exception(f'Feature Selection Direction not recognized: {fs_method}')\n",
-    "\n",
-    "if 'lin' in fs_method:\n",
-    "    model_wrapper = LinearRegressionWrapper(model_params={'fit_intercept': True})\n",
-    "elif 'rf'in fs_method:\n",
-    "    model_wrapper = RandomForestWrapper()\n",
-    "elif 'svm' in fs_method:\n",
-    "    model_wrapper = SVMWrapper()\n",
-    "else:\n",
-    "    raise Exception(f'Feature Selection Model not recognized: {fs_method}')\n",
-    "\n",
-    "sfs = SequentialFeatureSelector(model_wrapper.ModelClass, cv=5, scoring=\"neg_mean_squared_error\", direction=direction)\n",
-    "\n",
-    "Xt_train = pd.concat([yt_train, Xt_train], axis=1)\n",
-    "Xt_test = pd.concat([yt_test, Xt_test], axis=1)\n",
+    "    selected_variables = []\n",
     "\n",
     "# create lags of Xt variables\n",
-    "Xt_train = add_and_keep_lags_only(data=Xt_train, lags=selected_p)\n",
-    "Xt_test = add_and_keep_lags_only(data=Xt_test, lags=selected_p)\n",
+    "add_and_keep_lags_only(data=data_train, lags=selected_p)\n",
+    "add_and_keep_lags_only(data=data_test, lags=selected_p)\n",
     "\n",
-    "Xt_train = Xt_train.dropna()\n",
-    "yt_train = yt_train.loc[Xt_train.index]\n",
-    "\n",
-    "sfs.fit(Xt_train, yt_train.values.ravel())\n",
-    "\n",
-    "selected_indices = sfs.get_support(indices=True)\n",
-    "selected_variables = Xt_train.columns[selected_indices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2,  4,  6,  7,  8,  9, 10, 14, 15, 17, 18, 21, 25, 26, 28, 29, 31,\n",
-       "       32, 35, 37])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ldEXME(t-3)', 'dCMR(t-1)', 'dCMR(t-3)', 'dCMR(t-4)', 'ldFCIr(t-1)',\n",
-       "       'ldFCIr(t-2)', 'ldFCIr(t-3)', 'ldRIMFr(t-3)', 'ldRIMFr(t-4)',\n",
-       "       'ldMAr(t-2)', 'ldMAr(t-3)', 'ldCHFr(t-2)', 'ldtotOAr(t-2)',\n",
-       "       'ldtotOAr(t-3)', 'ldGDPch(t-1)', 'ldGDPch(t-2)', 'ldGDPch(t-4)',\n",
-       "       'ldGDPeu(t-1)', 'ldGDPeu(t-4)', 'dCPI(t-2)'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_variables"
+    "Xt_train = data_train.dropna()\n",
+    "Xt_test = data_test.dropna()"
    ]
   },
   {
@@ -282,29 +273,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_model_features = copy(selected_variables)"
+    "selected_variables_df = pd.DataFrame(1, index=selected_variables, columns=[Xt_test.index[-1]]).T\n",
+    "\n",
+    "yt_test_zscore = yt_test.copy()\n",
+    "yt_test_zscore.index = pd.to_datetime(yt_test_zscore.index)\n",
+    "yt_test = yt_test * std[yt_test.columns[0]] + mean[yt_test.columns[0]]\n",
+    "yt_test.index = pd.to_datetime(yt_test.index)\n",
+    "\n",
+    "if len(selected_variables) != 0:\n",
+    "\n",
+    "    # add clusters to parents\n",
+    "    melted_selected_variables_df = selected_variables_df.reset_index().melt(\"index\").rename(columns={\"index\": \"date\"})\n",
+    "    melted_selected_variables_df[\"fred\"] = [varname.split(\"(\")[0] for varname in melted_selected_variables_df[\"variable\"]]\n",
+    "    melted_selected_variables_df = pd.merge(melted_selected_variables_df, labelled_clusters[[\"fred\", \"cluster\"]], how=\"left\", on=\"fred\")\n",
+    "    parents_of_target.append(melted_selected_variables_df)\n",
+    "\n",
+    "    Xt_selected_train = []\n",
+    "    Xt_selected_test = []\n",
+    "    for full_vname in selected_variables:\n",
+    "        Xt_selected_train.append(Xt_train[full_vname])\n",
+    "        Xt_selected_test.append(Xt_test[full_vname])\n",
+    "\n",
+    "    Xt_selected_train = pd.concat(Xt_selected_train, axis=1)\n",
+    "    Xt_selected_train = pd.concat([yt_train, Xt_selected_train], axis=1)\n",
+    "    Xt_selected_train = Xt_selected_train.dropna()\n",
+    "\n",
+    "    Xt_selected_test = pd.concat(Xt_selected_test, axis=1)\n",
+    "    Xt_selected_test = Xt_selected_test.dropna()\n",
+    "\n",
+    "    if incercept:\n",
+    "        Xt_selected_train[\"const\"] = 1\n",
+    "        Xt_selected_test[\"const\"] = 1\n",
+    "\n",
+    "    # linear regression estimate and prediction\n",
+    "    model = sm.OLS(endog=Xt_selected_train[target], exog=Xt_selected_train.drop([target], axis=1))\n",
+    "    model_fit = model.fit()\n",
+    "    ypred = model_fit.predict(exog=Xt_selected_test)\n",
+    "\n",
+    "    pred = pd.DataFrame([{\n",
+    "        \"date\": ypred.index[0],\n",
+    "        \"prediction_zscore\": ypred[0],\n",
+    "        \"true_zscore\": yt_test_zscore.loc[ypred.index[0]][0],\n",
+    "        \"prediction\": ypred[0] * std[yt_test.columns[0]] + mean[yt_test.columns[0]],\n",
+    "        \"true\": yt_test.loc[ypred.index[0]][0],\n",
+    "        }])\n",
+    "    predictions.append(pred)\n",
+    "else:\n",
+    "    pred = pd.DataFrame([{\n",
+    "        \"date\": yt_test.index[-1],\n",
+    "        \"prediction_zscore\": 0,\n",
+    "        \"true_zscore\": yt_test_zscore.iloc[-1][0],\n",
+    "        \"prediction\": 0,\n",
+    "        \"true\": yt_test.iloc[-1][0],\n",
+    "        }])\n",
+    "    predictions.append(pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linear_model_features = copy(selected_variables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cml-fin",
+   "display_name": "cml-fin-r",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
