--- a/src/drafs/debug_sfs copy.ipynb
+++ b/src/drafs/debug_sfs copy.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/danielco/miniconda3/envs/cml-fin/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rpy2 package not installed. You wont be able to run seqICP model.\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import pandas as pd\n",
@@ -33,7 +49,7 @@
     "pval_threshold=0.05\n",
     "fix_start=True\n",
     "incercept=True\n",
-    "fs_method=\"sfstscv-backward-svm\"\n",
+    "fs_method=\"sfscv-backward-svm\"\n",
     "opt_k_method=\"no\"\n",
     "clustering_method=\"no\"\n",
     "n_clusters=0\n",
@@ -102,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +286,7 @@
        " 'model__kernel': 'rbf'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,20 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False,  True, False, False,  True,  True, False,  True,  True,\n",
-       "       False, False,  True, False,  True, False,  True,  True, False,\n",
-       "       False,  True,  True, False, False,  True,  True, False, False,\n",
-       "       False, False,  True,  True, False, False,  True,  True,  True,\n",
-       "        True, False, False,  True])"
+       "array([False, False,  True, False,  True,  True, False,  True,  True,\n",
+       "       False,  True, False, False,  True, False,  True, False, False,\n",
+       "       False,  True, False,  True, False,  True,  True, False, False,\n",
+       "       False, False,  True, False,  True,  True,  True, False,  True,\n",
+       "        True, False,  True,  True])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,21 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ldEXME(t-2)', 'dCMR(t-1)', 'dCMR(t-2)', 'dCMR(t-4)', 'ldFCIr(t-1)',\n",
-       "       'ldFCIr(t-4)', 'ldRIMFr(t-2)', 'ldRIMFr(t-4)', 'ldMAr(t-1)',\n",
-       "       'ldMAr(t-4)', 'ldCHFr(t-1)', 'ldCHFr(t-4)', 'ldtotOAr(t-1)',\n",
-       "       'ldGDPch(t-2)', 'ldGDPch(t-3)', 'ldGDPeu(t-2)', 'ldGDPeu(t-3)',\n",
-       "       'ldGDPeu(t-4)', 'dCPI(t-1)', 'dCPI(t-4)'],\n",
+       "Index(['ldEXME(t-3)', 'dCMR(t-1)', 'dCMR(t-2)', 'dCMR(t-4)', 'ldFCIr(t-1)',\n",
+       "       'ldFCIr(t-3)', 'ldRIMFr(t-2)', 'ldRIMFr(t-4)', 'ldMAr(t-4)',\n",
+       "       'ldCHFr(t-2)', 'ldCHFr(t-4)', 'ldtotOAr(t-1)', 'ldGDPch(t-2)',\n",
+       "       'ldGDPch(t-4)', 'ldGDPeu(t-1)', 'ldGDPeu(t-2)', 'ldGDPeu(t-4)',\n",
+       "       'dCPI(t-1)', 'dCPI(t-3)', 'dCPI(t-4)'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
