--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "var-lingam_nocluster        126.315476  231.761862  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "var-lingam_nocluster              -105.446386  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selected Features During Specific Periods"
+    "## Selected Features During Specific Periods\n",
+    "\n",
+    "ldFCIr\n",
+    "\n",
+    "\n",
+    "ldGDPch"
    ]
   },
   {
@@ -1112,22 +1117,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "       fred   \n",
-       "value  dCMR       4.0\n",
-       "       dCPI       4.0\n",
-       "       ldEXME     4.0\n",
-       "       ldGDPch    4.0\n",
-       "       ldFCIr     1.0\n",
-       "dtype: float64"
+       "value  dCMR       NaN\n",
+       "       dCPI       NaN\n",
+       "       ldCHFr     1.0\n",
+       "       ldEXME     1.0\n",
+       "       ldFCIr     NaN\n",
+       "       ldGDPch    NaN\n",
+       "       ldGDPeu    NaN\n",
+       "       ldMAr      NaN\n",
+       "       ldRIMFr    NaN\n",
+       "Name: 2017-01-01 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,38 +1147,72 @@
     "\n",
     "check_df = all_parents_df.loc[(all_parents_df['etf'] == etf)&(all_parents_df['fs'] == fs)].drop([\"etf\", \"fs\"], axis=1)\n",
     "\n",
-    "check_df.pivot_table(index=[\"date\"], columns=[\"fred\"], values=[\"value\"]).loc[\"2008-07-01\":\"2008-10-01\"].dropna(axis=1, how=\"all\").sum(axis=0).sort_values(ascending=False)"
+    "check_df.pivot_table(index=[\"date\"], columns=[\"fred\"], values=[\"value\"]).dropna(axis=1, how=\"all\").iloc[-1]# .sum(axis=0).sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "       fred   \n",
-       "value  dCMR       4.0\n",
-       "       dCPI       4.0\n",
-       "       ldEXME     4.0\n",
-       "       ldGDPch    4.0\n",
-       "       ldFCIr     1.0\n",
-       "dtype: float64"
+       "value  dCMR       NaN\n",
+       "       dCPI       NaN\n",
+       "       ldCHFr     1.0\n",
+       "       ldEXME     1.0\n",
+       "       ldFCIr     NaN\n",
+       "       ldGDPch    1.0\n",
+       "       ldGDPeu    NaN\n",
+       "       ldRIMFr    NaN\n",
+       "Name: 2017-01-01 00:00:00, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "etf = \"ldEXME\" # \"SPY\"\n",
-    "fs = \"dynotears_nocluster\"\n",
+    "fs = \"var-lingam_nocluster\"\n",
     "\n",
     "check_df = all_parents_df.loc[(all_parents_df['etf'] == etf)&(all_parents_df['fs'] == fs)].drop([\"etf\", \"fs\"], axis=1)\n",
     "\n",
-    "check_df.pivot_table(index=[\"date\"], columns=[\"fred\"], values=[\"value\"]).loc[\"2008-07-01\":\"2008-10-01\"].dropna(axis=1, how=\"all\").sum(axis=0).sort_values(ascending=False)"
+    "check_df.pivot_table(index=[\"date\"], columns=[\"fred\"], values=[\"value\"]).dropna(axis=1, how=\"all\").iloc[-1]# .sum(axis=0).sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       fred   \n",
+       "value  dCMR       1.0\n",
+       "       dCPI       NaN\n",
+       "       ldEXME     1.0\n",
+       "       ldGDPch    NaN\n",
+       "       ldMAr      NaN\n",
+       "Name: 2017-01-01 00:00:00, dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "etf = \"ldEXME\" # \"SPY\"\n",
+    "fs = \"pcmci_nocluster\"\n",
+    "\n",
+    "check_df = all_parents_df.loc[(all_parents_df['etf'] == etf)&(all_parents_df['fs'] == fs)].drop([\"etf\", \"fs\"], axis=1)\n",
+    "\n",
+    "check_df.pivot_table(index=[\"date\"], columns=[\"fred\"], values=[\"value\"]).dropna(axis=1, how=\"all\").iloc[-1]# .sum(axis=0).sort_values(ascending=False)"
    ]
   },
   {
