--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "    \"pcmci_nocluster\",\n",
     "    \"dynotears_nocluster\", \n",
     "    \"pairwise-granger_nocluster\",\n",
-    "    # \"multivariate-granger_nocluster\",\n",
+    "    \"multivariate-granger_nocluster\",\n",
     "    \"var-lingam_nocluster\",\n",
     "    \"sfscv-forward-lin_nocluster\",\n",
     "    \"sfscv-backward-lin_nocluster\",\n",
